# nomad-timer

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: api.md  repository-split.md
site/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
site/deploy/: Caddyfile  nomad-timer-rate-limit.conf  nomad-timer.hyeon.space.nginx
site/src/: App.test.tsx  App.tsx  content.ts  main.tsx  sections.css  styles.css
src/: api_contract.rs  cat_assets.rs  client.rs  lib.rs  main.rs  presets.rs  server.rs  timer.rs  widget.rs
